--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "http2": "^3.3.7",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
+    "swing": "^3.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-swing": "0.0.10",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
